# agent

./: .env.example  .gitignore  README.md  install.sh  labeler.py  main.py  personal_briefing.py  pyproject.toml  team_dashboard.py  tools.py
systemd/: agent-hourly-brief.service  agent-hourly-brief.timer  agent-labeler.service  agent-labeler.timer  agent-morning-brief.service  agent-morning-brief.timer  agent-personal-briefing.service  agent-personal-briefing.timer  agent-team-dashboard.service  agent-team-dashboard.timer
